--- a/Happyling/CustomCells/RatingViewController.xib
+++ b/Happyling/CustomCells/RatingViewController.xib
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RatingViewController" customModule="Happyling" customModuleProvider="target">
             <connections>
+                <outlet property="isResolvedLabel" destination="o59-Sy-QNm" id="xSN-Dj-Exw"/>
+                <outlet property="isResolvedSwitch" destination="ZH9-Is-2WW" id="VtP-uF-h2F"/>
                 <outlet property="rating" destination="oGk-Be-fj4" id="YB7-19-GJz"/>
                 <outlet property="txtAvaliation" destination="gZR-XH-gEq" id="59V-Hq-h3X"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -41,15 +43,6 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kaK-sF-Zhj">
-                    <rect key="frame" x="16" y="365" width="343" height="30"/>
-                    <state key="normal" title="Enviar">
-                        <color key="titleColor" red="1" green="0.36078431370000003" blue="0.1215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="sendRating:" destination="-1" eventType="touchUpInside" id="fQC-AD-ivk"/>
-                    </connections>
-                </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_logo_navigation" translatesAutoresizingMaskIntoConstraints="NO" id="ud4-sW-Ucs">
                     <rect key="frame" x="48" y="123" width="278" height="60"/>
                     <constraints>
@@ -65,6 +58,26 @@
                     </state>
                     <connections>
                         <action selector="close:" destination="-1" eventType="touchUpInside" id="CbW-CP-x9C"/>
+                    </connections>
+                </button>
+                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZH9-Is-2WW">
+                    <rect key="frame" x="16" y="365" width="51" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </switch>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o59-Sy-QNm">
+                    <rect key="frame" x="73" y="365" width="286" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kaK-sF-Zhj">
+                    <rect key="frame" x="16" y="404" width="343" height="30"/>
+                    <state key="normal" title="Enviar">
+                        <color key="titleColor" red="1" green="0.36078431370000003" blue="0.1215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="sendRating:" destination="-1" eventType="touchUpInside" id="fQC-AD-ivk"/>
                     </connections>
                 </button>
             </subviews>
@@ -86,6 +99,7 @@
                 <constraint firstItem="gZR-XH-gEq" firstAttribute="trailing" secondItem="kaK-sF-Zhj" secondAttribute="trailing" id="az0-cl-4FA"/>
                 <constraint firstItem="Rre-wK-g30" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="r0u-29-RWu"/>
             </constraints>
+            <point key="canvasLocation" x="33.5" y="138.5"/>
         </view>
     </objects>
     <resources>
